# pupadrive

./: .gitignore  README.md  pyproject.toml
pupadrive/: __init__.py  __main__.py  manager.py  pupadrive.py
pupadrive/helper/: ddownload.py  drive.py  http_methods.py  rapidgator.py  tranlate.py  utils.py
pupadrive/plugins/: ddownload.py  magnet.py  main.py  rapidgator.py  tgupload.py
